Closed Bug 347374 Opened 20 years ago Closed 20 years ago

SVG: pointer-events="stroke" doesn't respect stroke-width

Categories

(Core :: SVG, defect)

1.8 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: a.neumann, Assigned: tor)

References

()

Details

(Keywords: fixed1.8.1)

Attachments

(4 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1b1) Gecko/20060710 Firefox/2.0b1 Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1b1) Gecko/20060710 Firefox/2.0b1 In the provided example there are two lines: one "invisible" (stroke="none") which has the pointer-events set to "stroke" and a stroke-width of "20". The second, red line on top, has the pointer-events set to "none" and is only for reference for where to click. It seems like MozillaSVG doesn't respect the stroke-width when pointer-events="stroke". If you click exactly at the center of the red line, the click event is fired, but it should be fired everywhere at the red line, not just at the center. This bug appears on all platforms and in all version up to now (FF1.5x, FF2 and FF3 trunk) Reproducible: Always Steps to Reproduce: 1. load the file 2. click on the red line 3. you should receive an alert wherever you click on the red line Actual Results: the stroke-width of the first line is not respected. It treats it like a line with a stroke-width of 1. Expected Results: the stroke-width should be respected
Assignee: nobody → general
Component: General → SVG
Product: Firefox → Core
QA Contact: general → ian
Version: unspecified → 1.8 Branch
Assignee: general → tor
Status: UNCONFIRMED → ASSIGNED
Attachment #232216 - Flags: review?(roc)
Attachment #232216 - Attachment is obsolete: true
Attachment #232216 - Flags: review?(roc)
Attachment #232273 - Flags: review?(roc)
Checked in on trunk.
Attachment #232602 - Flags: review?(roc)
Attachment #232602 - Flags: superreview?(bugmail)
Comment on attachment 232602 [details] [diff] [review] similar change for 1.8 branch I don't really understand the code, but from an sr point of view it looks fine.
Attachment #232602 - Flags: superreview?(bugmail) → superreview+
Attachment #232602 - Flags: approval1.8.1?
Comment on attachment 232602 [details] [diff] [review] similar change for 1.8 branch a=drivers, please land it on the branch.
Attachment #232602 - Flags: approval1.8.1? → approval1.8.1+
Checked in on MOZILLA_1_8_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Keywords: fixed1.8
Resolution: --- → FIXED
*** Bug 349999 has been marked as a duplicate of this bug. ***
Keywords: fixed1.8fixed1.8.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: