Bug 347374 - pointer events not working on unpainted geometry, events not respecting fill rule or dasharray.  r+sr=roc